<resources>
    <string name="app_name">Cineverse</string>

    <string name="see_all">See all</string>
    <string name="top_rated">Top Rated</string>
    <string name="latest">Latest</string>
    <string name="popular">Popular</string>
    <string name="tv_shows">TV Shows</string>
    <string name="search_hint">Search for a movie, tv show, person…</string>
    <string name="movies_chip">Movies</string>
    <string name="tv_shows_chip">TV Shows</string>
    <string name="actors_label">Actors</string>
    <string name="welcome_back_CineVerse">Welcome back to CineVerse!</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_Input">Enter your password</string>
    <string name="userName_Input">Enter your email or username</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create a New Account</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="place_of_birth">place of Birth</string>
    <string name="konwn_for">Known For</string>
    <string name="create_a_new_list">Create a new list</string>
    <string name="todo">TODO</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="biography">Biography</string>
    <string name="movies">Movies</string>
    <string name="actors">Actors</string>
    <string name="oops">Oops!</string>
    <string name="description">There is no internet connection\nPlease check it out</string>
    <string name="all_movies_of_actor">All Movies Of Actor</string>
    <!--   Titles -->
    <string name="title_on_air">On The Air</string>
    <string name="title_tv_shows">TV Shows</string>
    <string name="title_mystery">Mystery</string>
    <string name="title_adventure">Adventure</string>
    <string name="title_trending">Trending</string>
    <string name="title_streaming">Now Streaming</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_celebrity">Celebrities</string>
    <string name="title_airing_today">Airing today</string>
    <string name="title_top_rated_tv_show">Top Rated Tv-Show</string>
    <string name="text_movies">%s Movies</string>
    <string name="movies_label">Movies</string>
    <string name="tv_shows_label">TV Shows</string>
    <string name="history_label">History</string>
    <string name="explore_label">Explore</string>
    <string name="trending_today_label">Trending Today</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="myList">My Collections</string>
    <string name="profile">My Profile</string>
    <string name="play_trailer">Play Trailer</string>
    <string name="duration">%1$d Minutes</string>
    <string name="reviews">(%1$s reviews)</string>
    <string name="overview">Overview</string>
    <string name="cast">Cast</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="rate_the_movie">Rate The Movie</string>
    <string name="reviews_title">Reviews</string>
    <string name="review">Reviews</string>
    <string name="reviews_comment">Reviews</string>
    <string name="user_name">"@" %1$s</string>
    <string name="back_button">back button</string>
    <string name="view_all_reviews">View all reviews</string>
    <string name="episodes">Episodes</string>
    <string name="seasons">Seasons</string>
    <string name="submit_toast">Submitted, Thank you for your feedback</string>
    <string name="total_episodes">%1$s Episodes</string>
    <string name="m">%1$s m</string>
    <string name="watch_history">Watch History</string>
    <string name="rated_movies">My Ratings</string>
    <string name="sign_out">Sign Out</string>
    <string name="at">\@</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="you_re_about_to_sign_out_of_your_account">You’re about to sign out of your account.</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="this_list_has_no_movies">This list has no movies</string>
    <string name="zero">\.0</string>
    <string name="my_ratings">My Ratings</string>
    <string name="items">%1$s movies</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create">Create</string>
    <string name="list_name">e.g. My Watchlist</string>
    <string name="explore_some_movies_on_home_or_search_and_then_create_your_movie_list">Explore some movies on “Home” or “Search” and then create your movie list.</string>
    <string name="empty_overview_text">This season has no description.</string>
    <string name="one_season">%1$d Season</string>
    <string name="more_than_one_season">%1$d Seasons</string>
    <string name="internet_connection">There is no internet connection.</string>
    <string name="retry">Retry</string>
    <string name="you_must_be_logged_in_to_see_the_profile">You must be logged in to see the profile and use additional features.</string>
    <string name="new_list">New List</string>
    <string name="log_in">Log In</string>
    <string name="you_must_be_logged_in_to_use_list_features">You must be logged in to use lists feature.</string>
    <string name="empty">Empty</string>
    <string name="create_new_collection">Create New Collection</string>
    <string name="save_to">Save to…</string>
    <string name="hours_pattern">%1$s hours</string>
    <string name="minutes_pattern">%1$s minutes</string>
    <string name="hours_minutes_pattern">%1$s h %2$s m</string>
    <string name="you_must_be_logged_in_to_save_a_movie">You must be logged in to save a movie</string>
    <string name="this_list_has_no_lists">No lists found</string>
    <string name="episode_title">%1$d. %2$s</string>
    <string name="season_number">(%1$s Seasons)</string>
    <string name="join_as_guest">Join as Guest</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="join_cineverse">Join CineVerse</string>
    <string name="sign_up_bottom_sheet_text">Let’s get you set up! We’ll take you to the website to create your account.</string>
    <string name="go_to_website">Go to Website</string>
    <string name="show_more">Show More</string>
    <string name="gallery">Gallery</string>
    <string name="try_again">Try Again</string>
    <string name="try_again_connect_description">Looks like you\'re offline. Let\'s reconnect so\n you don\'t miss out!</string>
    <string name="oops_no_internet">Oops! No Internet</string>
    <string name="best_of">Best of %1$s</string>
    <string name="born_on">Born on %1$s</string>
    <string name="welcome">Welcome</string>
    <string name="cine_verse_logo">Cine Verse Logo</string>
    <string name="rating_icon">Rating icon</string>
    <string name="match">Match</string>
    <string name="me">Me</string>
    <string name="magic_stick_icon">magic stick icon</string>
    <string name="alt_arrow_icon">alt arrow icon</string>
    <string name="we_ll_help_you_skip_the_scroll_and_go_nstraight_to_the_good_stuff">We’ll help you skip the scroll and go\nstraight to the good stuff.</string>
    <string name="let_us_choose_for_you">Let Us Choose For You!</string>
    <string name="what_should_i_watch">What Should I Watch?</string>
    <string name="need_more_to_watch">Need More to Watch?</string>
    <string name="browse_everything">Browse Everything</string>
    <string name="explore_all_movies_and_series_by_ngenre_or_search_for_anything_you_like">Explore all movies and series by\ngenre or search for anything you like.</string>
    <string name="delete">delete</string>
    <string name="no_collections_yet">No Collections Yet</string>
    <string name="start_building">Start building your personal library by saving movies or series you want to remember.</string>
    <string name="tip_swipe">Tip: Swipe left to remove movies from your collection.</string>
    <string name="collection_name">Collection Name</string>
    <string name="my_favorite_tv_shows">My Favorite TV Shows</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="you_ll_be_taken_to_the_website_to_update_your_name_username_or_profile_picture">You’ll be taken to the website to update your name, username, or profile picture.</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="you_can_always_sign_back_in_with_your_account">You can always sign back in with your account.</string>
    <string name="change_language">Change Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="history">History</string>
    <string name="my_collections">My Collections</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="language">Language</string>
    <string name="content_preferences">Content Preferences</string>
    <string name="version_1_0_1">Version 1.0.1</string>
    <string name="your_collections">Your Collections</string>
    <string name="folder_icon">folder icon</string>
    <string name="featured_collection_image">featured collection image</string>
    <string name="late_night_thrills">Late-Night Thrills</string>
    <string name="mind_bending_stories">Mind-Bending Stories</string>
    <string name="cinematic_masterpieces">Cinematic Masterpieces</string>
    <string name="family_night_picks">Family Night Picks</string>
    <string name="based_on_true_events">Based on True Events</string>
    <string name="feel_good_favorites">Feel-Good Favorites</string>
    <string name="featured_collections">Featured Collections</string>

</resources>