<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="listener"
            type="com.karrar.movieapp.ui.home.HomeInteractionListener" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">


        <TextView
            style="@style/TextStyle.Title.sm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/need_more_to_watch"
            android:textColor="@color/shade_primary"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing12"
            android:background="@drawable/cta_card_background"
            android:onClick="@{()->listener.onClickExploreCTA()}"
            android:orientation="horizontal"
            android:paddingVertical="11dp"
            android:paddingStart="16dp"
            android:paddingEnd="12dp">

            <FrameLayout
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/back_icon_shape"
                android:backgroundTint="@color/shade_quinary">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/magic_stick_icon"
                    android:src="@drawable/magic_stick" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingVertical="12dp">

                <TextView
                    style="@style/TextStyle.Title.sm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/browse_everything"
                    android:textColor="@color/shade_primary" />

                <TextView
                    style="@style/TextStyle.Body.sm.medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/explore_all_movies_and_series_by_ngenre_or_search_for_anything_you_like"
                    android:textColor="@color/shade_secondary" />
            </LinearLayout>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:contentDescription="@string/alt_arrow_icon"
                android:src="@drawable/arrow_right" />
        </LinearLayout>
    </LinearLayout>
</layout>