<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.karrar.movieapp.ui.login.LoginViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_screen"
        tools:context=".ui.login.LoginFragment">

        <LinearLayout
            android:id="@+id/logo_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingVertical="@dimen/spacing48"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:src="@drawable/cineverse_logo" />

            <TextView
                android:id="@+id/textView"
                style="@style/SemiBold.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back_CineVerse" />

        </LinearLayout>

        <TextView
            android:id="@+id/user_name"
            style="@style/Regular.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:text="@string/username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo_section" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            app:helperText="@{viewModel.loginUIState.userNameHelperText}"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@+id/user_name"
            app:startIconDrawable="@drawable/ic_profile"
            app:startIconTint="@color/shade_tertiary">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:afterTextChanged="@{(text) -> viewModel.onUserNameInputChange(text)}"
                android:background="@drawable/edit_text_shape"
                android:hint="@string/userName_Input"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:paddingVertical="@dimen/spacing_medium"
                android:textColor="@color/shade_primary"
                android:textColorHint="@color/shade_tertiary"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/password"
            style="@style/Regular.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_name_input" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_small"
            app:helperText="@{viewModel.loginUIState.passwordHelperText}"
            app:hintEnabled="false"
            app:boxStrokeErrorColor="@color/design_default_color_error"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:endIconDrawable="@drawable/eye_opened"
            app:endIconTint="@color/shade_secondary"
            app:startIconDrawable="@drawable/lock"
            app:endIconMode="custom"
            app:startIconTint="@color/shade_tertiary">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:afterTextChanged="@{(text) -> viewModel.onPasswordInputChange(text)}"
                android:background="@drawable/edit_text_shape"
                android:hint="@string/password_Input"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingVertical="@dimen/spacing_medium"
                android:textColor="@color/shade_primary"
                android:textColorHint="@color/shade_tertiary" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgetPassword"
            style="@style/Regular.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_small"
            android:paddingTop="@dimen/spacing_too_small"
            android:onClick="@{()->viewModel.onClickForgotPassword()}"
            android:text="@string/forgot_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_input" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/containedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing20"
            android:enabled="@{viewModel.loginUIState.validForm}"
            android:onClick="@{()->viewModel.onClickLogin()}"
            android:paddingVertical="14dp"
            android:stateListAnimator="@null"
            android:text="@string/login"
            android:textAppearance="@style/SemiBold.Medium"
            android:textColor="@color/button_onPrimary"
            app:backgroundTint="@color/color_states_material_button"
            app:cornerRadius="@dimen/radius_lg"
            app:hideIfTrue="@{viewModel.loginUIState.loading}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgetPassword" />


        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_extra_large"
            android:indeterminate="true"
            android:visibility="gone"
            app:indicatorColor="@color/brand_color"
            app:isVisible="@{viewModel.loginUIState.loading}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_input"
            app:trackColor="@color/shade_secondary_color" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/as_guest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing20"
            android:enabled="@{viewModel.loginUIState.validForm}"
            android:onClick="@{()->viewModel.onClickLogin()}"
            android:paddingVertical="15dp"
            android:stateListAnimator="@null"
            android:text="@string/join_as_guest"
            android:textAppearance="@style/SemiBold.Medium"
            android:textColor="@color/button_onSecondary"
            app:backgroundTint="@color/button_secondary"
            app:cornerRadius="@dimen/radius_lg"
            app:hideIfTrue="@{viewModel.loginUIState.loading}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/containedButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_new_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="@{()->viewModel.createAccountClick()}"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:paddingBottom="24dp"
            android:stateListAnimator="@null"
            android:text="@string/create_new_account"
            android:textAppearance="@style/SemiBold.Medium"
            android:textColor="@color/button_onSecondary"
            app:backgroundTint="@color/button_secondary"
            app:cornerRadius="@dimen/radius_md"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>