<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.karrar.movieapp.ui.profile.ProfileViewModel"/>

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing12"
            android:background="@drawable/bottom_sheet_shape"
            android:orientation="vertical"
            android:padding="@dimen/spacing_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:layout_width="48dp"
                android:layout_height="3dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spacing12"
                android:layout_marginBottom="@dimen/spacing20"
                android:background="@drawable/bottom_sheet_view" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_marginBottom="@dimen/spacing_small"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/Medium.TitleSmall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/change_language" />

                <ImageView
                    android:id="@+id/cancel_button"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/cancel"
                    android:src="@drawable/ic_cancel" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/english_card"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing12"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_uk_flag"
                    android:paddingVertical="22dp"
                    android:stateListAnimator="@null"
                    android:text="@string/english"
                    android:checkable="true"
                    android:textAppearance="@style/Medium.BodyMedium"
                    android:textColor="@color/button_text_color"
                    app:backgroundTint="@color/button_background_tint"
                    app:cornerRadius="@dimen/radius_lg"
                    app:strokeColor="@color/button_stroke_color"
                    app:strokeWidth="1dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/arabic_card"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_iraq_flag"
                    android:paddingVertical="22dp"
                    android:stateListAnimator="@null"
                    android:text="@string/arabic"
                    android:checkable="true"
                    android:textAppearance="@style/Medium.Body"
                    android:textColor="@color/button_text_color"
                    app:backgroundTint="@color/button_background_tint"
                    app:cornerRadius="@dimen/radius_lg"
                    app:strokeColor="@color/button_stroke_color"
                    app:strokeWidth="1dp" />
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>